# FrieghtFlow

./: .env.example  .gitignore  README.md  build_errors.txt  build_errors2.txt  build_errors3.txt  docker-compose.prod.yml  package-lock.json  package.json  pr_body.md  test.txt  testing_2.txt
contract/: .gitignore  CONTRACT_DOCUMENTATION.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  README_ACCESS_CONTROL.md  client.js  package-lock.json  package.json  setup.sh
contract/access-control/: Cargo.toml
contract/access-control/src/: lib.rs
contract/escrow_payment/: Cargo.toml
contract/escrow_payment/src/: error.rs  lib.rs  tests.rs  types.rs
contract/ffpay/: Cargo.toml
contract/ffpay/src/: escrow.rs  spliiter.rs
contract/reward_distribution/: Cargo.toml
contract/reward_distribution/src/: access.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contract/shipment_audit_trail/src/: access.rs  error.rs  events.rs  lib.rs  math.rs  storage.rs  test.rs  types.rs  validator.rs
contract/src/: access_control.cairo  cli.rs  company_manager.cairo  error.rs  escrow.cairo  fee_manager.cairo  lib.cairo  lib.rs  payment_processor.cairo  quality_control.cairo  server.rs  user_manager.cairo
contract/tests/: integration_tests.rs  test_access_control.cairo  test_escrow.cairo  test_payment_processor.cairo
contracts/: Cargo.toml
contracts/document/: Cargo.toml
contracts/document/src/: lib.rs  test.rs
contracts/escrow/: Cargo.toml  escrow-dispute.test.ts
contracts/escrow/src/: lib.rs
contracts/identity/: Cargo.toml
contracts/identity/src/: lib.rs  test.rs
contracts/package/: Cargo.toml
contracts/package/certification-registry/: Cargo.toml
contracts/package/cross-contract-validator/: Cargo.toml
contracts/package/document-bulk/: Cargo.toml
contracts/package/document-registry/: Cargo.toml
contracts/package/escrow-multisig/: Cargo.toml
contracts/package/escrow-partial/: Cargo.toml
contracts/package/escrow-pausable/: Cargo.toml
contracts/package/escrow-timeout/: Cargo.toml
contracts/package/escrow-with-fees/: Cargo.toml
contracts/package/identity-blocklist/: Cargo.toml
contracts/package/reputation-batch/: Cargo.toml
contracts/package/reputation-decay/: Cargo.toml
contracts/package/shipment-events/: Cargo.toml
contracts/reputation/: Cargo.toml
contracts/shipment/: Cargo.toml  shipment-metadata.ts
(+1857 files in other folders)
