[workspace]
resolver = "2"
members = [
    "identity",
    "shipment",
    "escrow",
    "document",
    "reputation",
    "package/escrow-multisig",
    "package/escrow-partial",
    "package/shipment-milestones",
    "package/reputation-batch",
    "package/upgradeable",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
