[workspace]
resolver = "2"
members = [
    "identity",
    "shipment",
    "escrow",
    "document",
    "reputation",
    "package/escrow-multisig",
    "package/escrow-partial",
    "package/escrow-timeout",
    "package/escrow-with-fees",
    "package/identity-blocklist",
    "package/shipment-milestones",
    "package/reputation-batch",
    "package/upgradeable",
    "package/tests/escrow",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
